updated page text

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -410,7 +410,7 @@ function make_dsg_private (dsgid) {
   <tr><td>
    <span>Organisms: </span><span class=small id=org_count><TMPL_VAR NAME="ORG_COUNT"></span> 
    <DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
-   <span class="ui-button ui-corner-all" id=allorg onClick="add_all_org();$('#geno_list').dialog('option', 'width', 500).dialog('open');">Add all</span><br>
+   <span class="ui-button ui-corner-all" id=allorg onClick="add_all_org();$('#geno_list').dialog('option', 'width', 500).dialog('open');">Add all to Genome List</span><br>
    <td valign=top>
    <DIV>Organism information</DIV>
    <div id=org_info class = "small ui-corner-all ui-widget-content" ></div>
