HTML::Tmpl var for tile server is not surrounded by single quotes.

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -77,7 +77,7 @@
 //     ##################################
           [
 //	    'http://coge.iplantcollaborative.org/CoGe/tiler.pl?'
-	    '<TMPL_VAR NAME=TILE_SERVER>'
+	    <TMPL_VAR NAME=TILE_SERVER>
 	  ];
 
 //     ##################################
