added text to options

--- a/web/tmpl/SynFind.tmpl
+++ b/web/tmpl/SynFind.tmpl
@@ -715,8 +715,8 @@ $(function(){
      <TD><input id=ws type=text size=3 value=<TMPL_VAR NAME=WS>></TD>
     </TR>
     <TR>
-     <TD>Cutoff:</TD>
-     <TD><input id=co type=text size=3 value=<TMPL_VAR NAME=CO>></TD>
+     <TD>Cutoff: </TD>
+     <TD><input id=co type=text size=3 value=<TMPL_VAR NAME=CO>> Percent of genes in window making gene-pairs.  Valid range: (0,1]</TD>
     </TR>
     <TR>
      <TD>Scoring Funciton:</TD>
