turned off not search if search term equals the search term stored in pageObj.  There is sometimes a race condition when an old search will overwrite a new search and this activates the re-search button

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -211,7 +211,7 @@ function timing(val, val2){
   pageobjtime = "time"+val;
   if (pageObj.pageobjsearch && pageObj.pageobjsearch == searchterm+val)
    {
-    return;
+//    return;
    }
   pageObj.pageobjsearch=searchterm+val;
   if (pageObj.pageobjtime){
