stopped auto-filling out blast spike sequence values

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -446,8 +446,8 @@ else if (alignment == "CHAOS")
  {
   animate_section("#chaos_options", "slideToggle");	
   animate_section("#spike_sequence", "slideDown");
-  if (spike == "undefined" || spike == 0) {spike = 15;} 	
-  $("#spike").val(spike);
+  //if (spike == "undefined" || spike == 0) {spike = 15;} 	
+  //$("#spike").val(spike);
 	
  }
 else if (alignment == "DiAlign_2")
@@ -473,8 +473,8 @@ else if (alignment == 'blastn')
 //  $("#blast_gapopen").val(5);
 //  $("#blast_gapextend").val(2);
 //  $("#blast_eval").val(30);
-  if (spike == "undefined" || spike == 0) {spike = 15;} 	
-  $("#spike").val(spike);
+  //if (spike == "undefined" || spike == 0) {spike = 15;} 	
+  //$("#spike").val(spike);
   check_spike();		
   animate_section("#blast_options", "slideDown");
   animate_section(".blastn_options", "slideDown");
