update href to auth.iplantcollaborative.org to use https

--- a/web/tmpl/footer.tmpl
+++ b/web/tmpl/footer.tmpl
@@ -13,7 +13,7 @@
 <script type="text/javascript">
 
 function login_cas(){
-	document.location.href='http://auth.iplantcollaborative.org/cas/loginPost?service='+document.location.href;
+	document.location.href='https://auth.iplantcollaborative.org/cas/loginPost?service='+document.location.href;
 	
 	 return true;
 }
