removed auto setting spike length to 0 (which overwrites user specified value from url

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -431,7 +431,7 @@ function check_alignment_program (){
   var help = '<a href='+help_path+' target="_new">Help File for '+alignment+'</a>';
   $('.help').html(help);
   var spike = $("#spike").val();
-  $("#spike").val(0);
+//  $("#spike").val(0);
   
 if (alignment == "blastz")
  {
