added algorithm Last

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -583,6 +583,7 @@ function post_to_grimm(seq1, seq2)
  <tr>
    <td style="color:#009900">Blast Algorithm:
    <td><select id="blast" name="blast">
+	<OPTION VALUE="6" <TMPL_VAR NAME="LAST_SELECT">>Last (fastest)
 	<OPTION VALUE="4" <TMPL_VAR NAME="LASTZ_SELECT">>(B)lastZ (fast)
         <OPTION VALUE="0" <TMPL_VAR NAME="MEGA_SELECT">>MegaBlast
         <OPTION VALUE="1" <TMPL_VAR NAME="DCMEGA_SELECT">>Discontinuous MegaBlast
